# A1_SDK

./: README.md  README_CONTROL.md  README_DRIVER.md
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/mobiman/share/mobiman/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobiman/share/mobiman/cmake/: mobimanConfig.cmake
install/mobiman/share/mobiman/config/: task.info  task_left.info  task_new.info  task_right.info
install/mobiman/share/mobiman/launch/: bag_replay.launch  joy_launch.launch  mobiman_manager.launch  robot_bringup.launch  robot_control_gazebo.launch  sim.launch  x1_robot_ocs2.launch
install/mobiman/share/mobiman/launch/act/: aloha_A1_l.launch  aloha_A1_r.launch  aloha_R1.launch  aloha_R1_left_only.launch  aloha_R1_right_only.launch  aloha_two_arm.launch  aloha_two_arm_viz.launch  r1_demo_Real_act.launch  r1_demo_Real_act_playbag.launch  r1_demo_Real_act_v2.launch  r1_demo_Sim_act_v8.launch
install/mobiman/share/mobiman/launch/anyGrasp/: r1_IK_demo.launch
install/mobiman/share/mobiman/launch/mpc/: a1_mpc.launch  a1_mpc_line_test.launch  a1_mpc_single_point_test.launch  ee_tracker_test.launch  mobile_manipulator.launch  mpc_hil.launch  mpc_ol.launch  mpc_real.launch  mpc_sim.launch  mpc_slave_hil.launch  mpc_slave_sim.launch  torso_control.launch
install/mobiman/share/mobiman/launch/simpleExample/: IKdemo.launch  IKnode.launch  eeTrackerdemo_launch.py  eeTrajTrackerdemo_launch.py  host_comp.launch  jointTrackerdemo.launch  jointTrackerdemo_launch.py  moveJ_continuous.launch  r1_demo_Real.launch  r1_demo_Sim.launch  r1_jointTrackerdemo.launch  r1_mpc_test.launch
install/mobiman/share/mobiman/scripts/: eeTrackerdemo.py  eeTrajTrackerdemo.py  jointTrackerdemo.py
install/mobiman/share/mobiman/urdf/A1/: CMakeLists.txt
install/mobiman/share/mobiman/urdf/A1/meshes/: arm_seg3.STL  arm_seg6.STL  base_link.STL  gripper1.STL
install/mobiman/share/mobiman/urdf/A1/urdf/: A1_URDF_0607_0028.urdf  A1_URDF_0607_0028_no_gripper.urdf
install/mobiman/share/mobiman/urdf/R1/: CMakeLists.txt
install/mobiman/share/mobiman/urdf/R1/config/: joint_names_URDF_R1_V1_0_4.yaml
install/mobiman/share/mobiman/urdf/R1/meshes/: base_link.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link6.STL  left_gripper_link1.STL  left_gripper_link2.STL  right_arm_link2.STL  right_arm_link3.STL  right_arm_link4.STL  right_arm_link5.STL  servo_link2.STL  torso_link4.STL  wheel_link2.STL
install/share/mobiman/: package.xml
install/share/mobiman/assets/: target.sdf  x1_dvt.urdf
install/share/mobiman/auto_generated/x1_robot/dynamics_flow_map/cppad_generated/: dynamics_flow_map_forward_zero.c  dynamics_flow_map_jacobian_sparsity.c
install/share/mobiman/cmake/: mobimanConfig.cmake
install/share/mobiman/config/: gazebo_controller.yaml  gazebo_pid_gains.yaml  task.info  task_new_r1.info  task_new_r1_left.info  task_ol.info  task_r1.info
install/share/mobiman/launch/act/: aloha.launch  tabletop_tele_mobinman_l.launch  tabletop_tele_mobinman_r.launch
install/share/mobiman/launch/simpleExample/: eeTrackerdemo.launch  eeTrajTrackerdemo.launch  jointTrackerdemo.launch
install/share/mobiman/urdf/A1/: A1_URDF_0607_0028.rviz  package.xml
install/share/mobiman/urdf/A1/config/: joint_names_A1_URDF_0607_0028.yaml
install/share/mobiman/urdf/A1/launch/: display_A1.launch  display_A1_no_gripper.launch  gazebo_A1.launch
install/share/mobiman/urdf/A1/meshes/: arm_seg1.STL  arm_seg2.STL  arm_seg4.STL  arm_seg5.STL  gripper2.STL
install/share/mobiman/urdf/A1/urdf/: A1_URDF_0607_0028.csv
install/share/mobiman/urdf/R1/: CMakeLists.txt  package.xml
install/share/mobiman/urdf/R1/launch/: display_r1.launch  gazebo_r1.launch
install/share/mobiman/urdf/R1/meshes/: right_gripper_link2.STL  servo_link1.STL  servo_link3.STL  torso_link1.STL  torso_link2.STL
install/share/mobiman/urdf/R1/urdf/: URDF_R1_V1_0_4.csv
install/signal_arm_msgs/share/signal_arm_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/signal_arm_msgs/share/signal_arm_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_signal_arm_msgs__rosidl_generator_cExport-relwithdebinfo.cmake  export_signal_arm_msgs__rosidl_generator_cExport.cmake  export_signal_arm_msgs__rosidl_generator_cppExport.cmake  export_signal_arm_msgs__rosidl_generator_pyExport-relwithdebinfo.cmake  export_signal_arm_msgs__rosidl_generator_pyExport.cmake  export_signal_arm_msgs__rosidl_typesupport_fastrtps_cExport-relwithdebinfo.cmake  export_signal_arm_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_signal_arm_msgs__rosidl_typesupport_fastrtps_cppExport-relwithdebinfo.cmake  export_signal_arm_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  signal_arm_msgsConfig.cmake  signal_arm_msgs__rosidl_typesupport_cExport-relwithdebinfo.cmake  signal_arm_msgs__rosidl_typesupport_cExport.cmake  signal_arm_msgs__rosidl_typesupport_cppExport-relwithdebinfo.cmake  signal_arm_msgs__rosidl_typesupport_cppExport.cmake  signal_arm_msgs__rosidl_typesupport_introspection_cExport-relwithdebinfo.cmake  signal_arm_msgs__rosidl_typesupport_introspection_cExport.cmake  signal_arm_msgs__rosidl_typesupport_introspection_cppExport-relwithdebinfo.cmake  signal_arm_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/signal_arm_msgs/share/signal_arm_msgs/msg/: ArmControl.idl  ArmControl.msg  Control.idl  Control.msg  ControlStamped.idl  ControlStamped.msg  GripperJointCommand.idl  GripperPositionControl.idl  GripperPositionControl.msg  MotorError.idl  Status.idl  Status.msg  StatusStamped.idl  StatusStamped.msg
install/signal_arm_msgs/share/signal_arm_msgs/srv/: FunctionFrame.idl  FunctionFrame_Request.msg
(+5812 files in other folders)
