<?xml version="1.0"?>
<package format="2">
  <name>mobiman</name>
  <version>0.0.0</version>
  <description>The manipulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zpyang@todo.todo">zpyang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/manipulator</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <!-- <depend>x1_robot_description</depend> -->
  <!-- <depend>rm_eco65_description</depend> -->
  <!-- <depend>foxglove_bridge</depend> -->
  <depend>controller_interface</depend>
  <depend>velocity_controllers</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <depend>controller manager</depend>
  <depend>joint_state_controller</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mobiman_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trac_ik_lib</depend>
  <!-- <depend>rm_msgs</depend> -->

  <!-- <depend>mobiman_target</depend> -->

  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>ocs2_self_collision_visualization</depend>
  <depend>ocs2_mobile_manipulator</depend>
  <depend>ocs2_mobile_manipulator_ros</depend>
  <depend>pinocchio</depend>
  <depend>signal_arm</depend>
  <depend>signal_torso</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/mobiman_basic_controller_plugins.xml"/>
  </export>
</package>
