<?xml version="1.0"?>

<package format="3">
    <name>signal_arm_msgs</name>
    <version>0.0.0</version>
    <description>signal_arm_msgs</description>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <maintainer email="zp2yang@outlook.com">ZP Yang</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
